# Ember

./: .gitattributes  .gitignore  Cargo.toml  EMBER.md  PUMPKIN_README.md  README.md  build.bat  check.bat  egg-pumpkin.json  push.bat  ship.bat  sync-upstream.bat
.github/workflows/: build-release.yml  docker.yml  easyworld-ci.yml  rust.yml  typos.yml
assets/translations/: de_de.json  en_us.json  es_es.json  fr_fr.json  it_it.json  ja_jp.json  ka_ge.json  ko_kr.json  lzh.json  nds_de.json  nl_be.json  nl_nl.json  pl_pl.json  pt_br.json  ro_ro.json  ru_ru.json  sq_al.json  tr_tr.json  uk_ua.json  vi_vn.json  zh_cn.json  zh_hk.json  zh_tw.json
docs/: easyworld.md  npc-plugin-plan.md
docs/features/: auth.json  bank.json  custom_block.json  custom_item.json  economy.json  furniture.json  home.json  hud.json  lottery.json  market.json  menu.json  npc.json  placeholder.json  resourcepack.json  shop.json  spawn.json  tpa.json  world.json
easyworld/: Cargo.toml
easyworld/src/: commands.rs  dialog.rs  lib.rs  service.rs
ember-wit/: ember.wit
npc-plugin/: Cargo.toml
npc-plugin/src/: lib.rs
pumpkin/: Cargo.toml
pumpkin-config/src/: auth.rs  chunk.rs  custom_block.rs  custom_item.rs  economy.rs  ember_world.rs  furniture.rs  home.rs  hud.rs  lib.rs  menu.rs  performance.rs  plugins.rs  resourcepack_builder.rs  server_links.rs  shop.rs  world.rs
pumpkin-nbt/src/: lib.rs  serializer.rs
pumpkin-plugin-api/src/: lib.rs
pumpkin-plugin-wit/v0.1/: bedrock-packets.wit  biomes.wit  command.wit  data-components.wit  entity-types.wit  event.wit  item-stack.wit  java-packets.wit  metadata.wit  particles.wit  player.wit  sounds.wit  world.wit
pumpkin-util/: Cargo.toml
pumpkin-world/: Cargo.toml
scripts/: README.md  build-remote.ps1  build-windows.ps1  check.ps1  push.ps1  ship.ps1  sync-upstream.ps1  verify-easyworld.bat  verify-easyworld.ps1  verify-easyworld.sh
(+111 files in other folders)
